fix gitlab yaml
add colon :

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ pages:
     paths:
       - public
 
-test:angularfrontend
+test:angularfrontend:
   image: debian:stable
   before_script:
     - pwd
