--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,9 @@ test:angularfrontend:
   before_script:
     - pwd
   script:
+    - apt-get update
+    - apt-get upgrade -yqq
+    - apt-get install build-essential curl -yqq
     - curl -sL https://deb.nodesource.com/setup_13.x | bash -
     - apt-get update
     - apt-get install -y nodejs
