--- a/backenddata/backenddata.csproj
+++ b/backenddata/backenddata.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\backenddomain\backenddomain.csproj" />
+  </ItemGroup>
+
 </Project>
